add control logic

--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -295,7 +295,9 @@ classDiagram
     class LinearSolver {
         calculate_temperature(float time) float
     }
-    
+    class ControlLogic {
+        <<abstract>>
+    }
     class TemperatureCalculationThread {
         pyqtSignal~float~ temperature_signal
         Solver solver
@@ -308,40 +310,14 @@ classDiagram
         set_temperature(float new_set_temperature)
     }
     
-    class CurveManager {
-        -PlotDataItem curve
-        -deque~float~ values
-        -deque~float~ times
-        update(float time, float value)
-    }
-    
-    class TemperaturePlotManager {
-        -PlotWidget plot_widget
-        -int max_points
-        -float start_time
-        -CurveManager setpoint_curve
-        -CurveManager measured_temp_curve
-        -CurveManager set_temp_curve
-        update_setpoint_curve()       
-        update_measured_temp_curve()       
-        update_set_temp_curve()       
-    }
-    
-    class PlotWidget {
-        clear()
-        plot(*args, **kwargs) PlotDataItem
-    }
-    
-    class PlotDataItem {
-        setData(*args, **kwargs)
-    }
     
     QThread <|-- TemperatureCalculationThread
     TemperatureCalculationThread o-- Solver
-    TemperaturePlotManager *-- CurveManager
-    TemperaturePlotManager o-- PlotWidget
-    CurveManager o-- PlotDataItem
     Solver <|-- LinearSolver
+    ControlLogic <|-- ReversedControlLogic
+    ControlLogic <|-- DirectControlLogic
+    ControlLogic <|-- PShapedControlLogic
+    ControlLogic <|-- UShapedControlLogic
 ```
 
 ## Взаимодействие с БД
@@ -388,6 +364,7 @@ classDiagram
     class Session {
         query()
         commit()
+        close()
     }
 
     SensorsService o-- Session
@@ -456,7 +433,6 @@ classDiagram
     class QDoubleSpinBox {
         pyqtSignal~float~ valueChanged
     } 
-    class QMainWindow
     
     class QCheckBox {
         pyqtSignal~int~ stateChanged
@@ -468,23 +444,49 @@ classDiagram
         setCurrentText(~str~)
     }
     
-    QObject <|-- QThread
+        class CurveManager {
+        -PlotDataItem curve
+        -deque~float~ values
+        -deque~float~ times
+        update(float time, float value)
+    }
+    
+    class TemperaturePlotManager {
+        -PlotWidget plot_widget
+        -int max_points
+        -float start_time
+        -CurveManager setpoint_curve
+        -CurveManager measured_temp_curve
+        -CurveManager set_temp_curve
+        update_setpoint_curve()       
+        update_measured_temp_curve()       
+        update_set_temp_curve()       
+    }
+    
+    class PlotWidget {
+        clear()
+        plot(*args, **kwargs) PlotDataItem
+    }
+    
+    class PlotDataItem {
+        setData(*args, **kwargs)
+    }
+
+    
     QObject <|-- QApplication 
     QObject <|-- QWidget
-    QPaintDevice <|-- QWidget
     QWidget <|-- QAbstractSpinBox
     QWidget <|-- QCheckBox
     QWidget <|-- QTableWidget
     QWidget <|-- QComboBox
-    QWidget <|-- QMainWindow
-    QWidget <|-- PlotWidget
     QComboBox <|-- SensorsComboBox
-    SensorsComboBox o-- Sensor
     QTableWidget <|-- CharacteristicsTableWidget
     QTableWidget <|-- SensorInfoTable
     QTableWidget <|-- TRMParametersInfoTable
-    CharacteristicsTableWidget *-- SensorCharacteristicsService
     QAbstractSpinBox <|-- QDoubleSpinBox
     QAbstractSpinBox <|-- QSpinBox
-
+    QWidget <|-- PlotWidget
+    TemperaturePlotManager o-- PlotWidget
+    TemperaturePlotManager *-- CurveManager
+    CurveManager o-- PlotDataItem
 ```
