--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -6,34 +6,34 @@
 classDiagram
     class BaseDevice {
         <<abstract>>
-        +int min_code
-        +int max_code
-        +send_code(int code)
+        int min_code
+        int max_code
+        send_code(int code)
         validate_code(int code)
     }
     
     class AD8400 {
-        -SPIDevice spidev
+        SPIDevice spidev
         send_code(int code)
     }
     
     class MCP4725 {
-        -_MCP4725 mcp 
-        -int address
+        _MCP4725 mcp 
+        int address
         send_code(int code)
     }
     
     class BaseRelay {
     <<interface>>
-        +turn_on()
-        +turn_off()
-        +set_value(bool value)
+        turn_on()
+        turn_off()
+        set_value(bool value)
     }
     
     class DigitalIORelay {
-        -DigitalInOut pin
-        -float delay
-        +set_value(bool value)
+        DigitalInOut pin
+        float delay
+        set_value(bool value)
     }
     
     class I2C {
@@ -53,30 +53,30 @@ classDiagram
     }
     
     class SPIDevice{
-        +SPI spi
-        +int baudrate
-        +int polarity
-        +int phase
-        +int extra_clocks
-        +DigitalInOut chip_select
-        +bool cs_active_value
+        SPI spi
+        int baudrate
+        int polarity
+        int phase
+        int extra_clocks
+        DigitalInOut chip_select
+        bool cs_active_value
         __enter__() SPI
         __exit__() bool
     }
 
     class _MCP4725 {
-        +int value
-        +int raw_value
-        -int address
-        -I2C i2c
+        int value
+        int raw_value
+        int address
+        I2C i2c
     }
     
     class DigitalInOut {
-        -Pin pin
-        +Direction direction
-        +bool value
-        +switch_to_output()
-        +switch_to_input()
+        Pin pin
+        Direction direction
+        bool value
+        switch_to_output()
+        switch_to_input()
     } 
     
     class Direction {
@@ -90,9 +90,9 @@ classDiagram
     }
    
     class Lockable {
-        -bool locked 
-        +try_lock() bool
-        +unlock() 
+        bool locked 
+        try_lock() bool
+        unlock() 
     }
     
     class ContextManaged {
@@ -131,9 +131,9 @@ classDiagram
     ContextManaged <|-- DigitalInOut
     
     class Lockable {
-        -bool locked 
-        +try_lock() 
-        bool +unlock() 
+        bool locked 
+        try_lock() 
+        bool unlock() 
     }
     
     class ContextManaged {
@@ -149,8 +149,8 @@ classDiagram
 classDiagram
 
     class SensorWorker {
-        -dict~SensorType, BaseSensorManager~ managers 
-        -BaseSensorManager current_manager 
+        dict~SensorType, BaseSensorManager~ managers 
+        BaseSensorManager current_manager 
         set_temperature(Number temperature)
         set_sensor(Sensor sensor)
     }
@@ -161,17 +161,17 @@ classDiagram
     
     class BaseSensorManager {
         <<interface>>
-        +set_sensor(Sensor sensor)
-        +set_temperature(Number temperature)
-        +select()
-        +unselect()   
+        set_sensor(Sensor sensor)
+        set_temperature(Number temperature)
+        select()
+        unselect()   
     }
     
     class UnifiedAnalogSignalManager {
-        -int min_temperature 
-        -int max_temperature
-        -MCP4725 mcp4725 
-        -list~BaseRelay~ relays
+        int min_temperature 
+        int max_temperature
+        MCP4725 mcp4725 
+        list~BaseRelay~ relays
         set_max_temperature(int new_temperature)
         set_min_temperature(int new_temperature)
         set_sensor(Sensor sensor)
@@ -180,18 +180,18 @@ classDiagram
     }
     
     class ResistanceThermometerManager {
-        -list~AD8400~ digipots
-        -list~BaseRelay~ relays
-        -DataFrame df
-        -calculate_codes(Number temperature)
+        list~AD8400~ digipots
+        list~BaseRelay~ relays
+        DataFrame df
+        calculate_codes(Number temperature)
         set_sensor(Sensor sensor)
         set_temperature(Number temperature)
         select()
     }
     class ThermocoupleManager {
-        -MCP4725 dac
-        -list~BaseRelay~ relays
-        -DataFrame df
+        MCP4725 dac
+        list~BaseRelay~ relays
+        DataFrame df
         set_sensor(Sensor sensor)
         set_temperature(Number temperature)
         select()
@@ -219,16 +219,16 @@ classDiagram
 classDiagram
     
     class OwenClient {
-        -Serial serial
-        -int address
-        -int address_length
+        Serial serial
+        int address
+        int address_length
         get_parameter(str name, ParamType type_, int index)
     }
     
     class Serial {
-        +baudrate
-        +port
-        +timeout
+        baudrate
+        port
+        timeout
         open()
         close()
         write(bytearray data) int
@@ -333,12 +333,12 @@ classDiagram
     }
     
     class SensorsService {
-        -Session session
+        Session session
         get_sensors() list~Sensor~
     }
     
     class SensorCharacteristicsService {
-        -Session session
+        Session session
         get_characteristics_by_sensor_name(str sensor) list~SensorCharacteristics~
     }
 
@@ -382,7 +382,7 @@ classDiagram
 
     class SensorsComboBox {
         pyqtSignal~Sensor~ sensor_changed
-        -list~Sensor~ sensors
+        list~Sensor~ sensors
         set_sensors(list~Sensor~)
         on_text_changed(str text)
     }
@@ -445,19 +445,19 @@ classDiagram
     }
     
         class CurveManager {
-        -PlotDataItem curve
-        -deque~float~ values
-        -deque~float~ times
+        PlotDataItem curve
+        deque~float~ values
+        deque~float~ times
         update(float time, float value)
     }
     
     class TemperaturePlotManager {
-        -PlotWidget plot_widget
-        -int max_points
-        -float start_time
-        -CurveManager setpoint_curve
-        -CurveManager measured_temp_curve
-        -CurveManager set_temp_curve
+        PlotWidget plot_widget
+        int max_points
+        float start_time
+        CurveManager setpoint_curve
+        CurveManager measured_temp_curve
+        CurveManager set_temp_curve
         update_setpoint_curve()       
         update_measured_temp_curve()       
         update_set_temp_curve()       
