--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -4,7 +4,7 @@
 
 ```mermaid
 classDiagram
-    class BaseDevice {
+    class Device {
         <<abstract>>
         int min_code
         int max_code
@@ -23,7 +23,7 @@ classDiagram
         send_code(int code)
     }
     
-    class BaseRelay {
+    class Relay {
     <<interface>>
         turn_on()
         turn_off()
@@ -105,42 +105,19 @@ classDiagram
     Lockable <|-- I2C
     Lockable <|-- SPI
     ContextManaged <|-- Lockable
-    BaseDevice <|-- AD8400
-    BaseDevice <|-- MCP4725
+    Device <|-- AD8400
+    Device <|-- MCP4725
     DigitalInOut <-- Direction 
     AD8400 *-- SPIDevice
     SPIDevice o-- SPI
     SPIDevice *-- DigitalInOut
     ContextManaged <|-- DigitalInOut
     MCP4725 *-- _MCP4725
-    BaseRelay <|.. DigitalIORelay
+    Relay <|.. DigitalIORelay
     DigitalIORelay o-- DigitalInOut
     I2C o-- Pin
     SPI o-- Pin
     DigitalInOut o-- Pin
-```
-
-Дополнение к периферии
-
-```mermaid
-classDiagram
-
-    Lockable <|-- I2C
-    Lockable <|-- SPI
-    ContextManaged <|-- Lockable
-    ContextManaged <|-- DigitalInOut
-    
-    class Lockable {
-        bool locked 
-        try_lock() 
-        bool unlock() 
-    }
-    
-    class ContextManaged {
-        __enter__() 
-        __exit__()
-        deinit() 
-    }
 ```
 
 ## Управление симуляторами датчиков
@@ -149,8 +126,8 @@ classDiagram
 classDiagram
 
     class SensorWorker {
-        dict~SensorType, BaseSensorManager~ managers 
-        BaseSensorManager current_manager 
+        dict~SensorType, Sensormanager~ managers 
+        Sensormanager current_manager 
         set_temperature(Number temperature)
         set_sensor(Sensor sensor)
     }
@@ -159,7 +136,7 @@ classDiagram
         moveToThread(QThread thread)
     }
     
-    class BaseSensorManager {
+    class Sensormanager {
         <<interface>>
         set_sensor(Sensor sensor)
         set_temperature(Number temperature)
@@ -171,7 +148,7 @@ classDiagram
         int min_temperature 
         int max_temperature
         MCP4725 mcp4725 
-        list~BaseRelay~ relays
+        list~Relay~ relays
         set_max_temperature(int new_temperature)
         set_min_temperature(int new_temperature)
         set_sensor(Sensor sensor)
@@ -181,7 +158,7 @@ classDiagram
     
     class ResistanceThermometerManager {
         list~AD8400~ digipots
-        list~BaseRelay~ relays
+        list~Relay~ relays
         DataFrame df
         calculate_codes(Number temperature)
         set_sensor(Sensor sensor)
@@ -190,7 +167,7 @@ classDiagram
     }
     class ThermocoupleManager {
         MCP4725 dac
-        list~BaseRelay~ relays
+        list~Relay~ relays
         DataFrame df
         set_sensor(Sensor sensor)
         set_temperature(Number temperature)
@@ -199,17 +176,17 @@ classDiagram
   
     QObject <|-- SensorWorker
     QThread o-- SensorWorker
-    SensorWorker o-- BaseSensorManager
-    BaseSensorManager <|.. UnifiedAnalogSignalManager
-    BaseSensorManager <|.. ResistanceThermometerManager
-    BaseSensorManager <|.. ThermocoupleManager
-    ResistanceThermometerManager o-- BaseRelay
+    SensorWorker o-- Sensormanager
+    Sensormanager <|.. UnifiedAnalogSignalManager
+    Sensormanager <|.. ResistanceThermometerManager
+    Sensormanager <|.. ThermocoupleManager
+    ResistanceThermometerManager o-- Relay
     ResistanceThermometerManager *-- DataFrame
     ThermocoupleManager *-- DataFrame
     ThermocoupleManager o-- MCP4725
-    ThermocoupleManager o-- BaseRelay
+    ThermocoupleManager o-- Relay
     UnifiedAnalogSignalManager o-- MCP4725
-    UnifiedAnalogSignalManager o-- BaseRelay
+    UnifiedAnalogSignalManager o-- Relay
     ResistanceThermometerManager o-- AD8400
 ```
 
@@ -249,6 +226,9 @@ classDiagram
     
     class TRMParametersReadThread {
         pyqtSignal~list~ parameters_signal
+        pyqtSignal~float~ temperature_signal
+        pyqtSignal~list~ output_signal
+        
         OwenClient client
         float update_period
         run()
@@ -279,7 +259,7 @@ classDiagram
         float set_temperature
         float interference_amplitude
         float interference_frequency
-        float direction
+        int direction
         bool sinusoidal_interference_enabled
         bool burst_interference_enabled
         set_sinusoidal_interference_enabled(bool value)
