--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -30,6 +30,11 @@ classDiagram
         set_value(bool value)
     }
     
+    class RelaysController {
+        RelaysController relays
+        __setitem__(int key, bool value)
+    }
+    
     class DigitalIORelay {
         DigitalInOut pin
         float delay
@@ -100,6 +105,12 @@ classDiagram
         __exit__()
         deinit() 
     }
+    
+    class Logger {
+        debug(message)
+        info(message)
+        error(message)
+    }
    
     _MCP4725 o-- I2C
     Lockable <|-- I2C
@@ -115,6 +126,7 @@ classDiagram
     MCP4725 *-- _MCP4725
     Relay <|.. DigitalIORelay
     DigitalIORelay o-- DigitalInOut
+    RelaysController "1" o-- "many" Relay
     I2C o-- Pin
     SPI o-- Pin
     DigitalInOut o-- Pin
@@ -143,12 +155,18 @@ classDiagram
         select()
         unselect()   
     }
+    class FakeManager {
+        set_sensor(Sensor sensor)
+        set_temperature(Number temperature)
+        select()
+        unselect()           
+    }
     
     class UnifiedAnalogSignalManager {
         int min_temperature 
         int max_temperature
         MCP4725 mcp4725 
-        list~Relay~ relays
+        RelaysController relays
         set_max_temperature(int new_temperature)
         set_min_temperature(int new_temperature)
         set_sensor(Sensor sensor)
@@ -158,7 +176,7 @@ classDiagram
     
     class ResistanceThermometerManager {
         list~AD8400~ digipots
-        list~Relay~ relays
+        RelaysController relays
         DataFrame df
         calculate_codes(Number temperature)
         set_sensor(Sensor sensor)
@@ -167,7 +185,7 @@ classDiagram
     }
     class ThermocoupleManager {
         MCP4725 dac
-        list~Relay~ relays
+        RelaysController relays
         DataFrame df
         set_sensor(Sensor sensor)
         set_temperature(Number temperature)
@@ -180,13 +198,14 @@ classDiagram
     Sensormanager <|.. UnifiedAnalogSignalManager
     Sensormanager <|.. ResistanceThermometerManager
     Sensormanager <|.. ThermocoupleManager
-    ResistanceThermometerManager o-- Relay
+    Sensormanager <|.. FakeManager
+    ResistanceThermometerManager o-- RelaysController
     ResistanceThermometerManager *-- DataFrame
     ThermocoupleManager *-- DataFrame
     ThermocoupleManager o-- MCP4725
-    ThermocoupleManager o-- Relay
+    ThermocoupleManager o-- RelaysController
     UnifiedAnalogSignalManager o-- MCP4725
-    UnifiedAnalogSignalManager o-- Relay
+    UnifiedAnalogSignalManager o-- RelaysController
     ResistanceThermometerManager o-- AD8400
 ```
 
@@ -231,7 +250,18 @@ classDiagram
         
         OwenClient client
         float update_period
+        read_parameters() list~TRMParameter~
         run()
+    }
+    
+    
+    class FakeTRMParametersReadThread {
+        read_parameters() list~TRMParameter~
+    }
+    
+    class TRMParameter {
+        str name
+        value
     }
     
     class QThread {
@@ -244,6 +274,7 @@ classDiagram
     OwenClient *-- Serial
     QThread <|-- TRMParametersReadThread
     TRMParametersReadThread o-- OwenClient 
+    TRMParametersReadThread <|-- FakeTRMParametersReadThread 
 ```
 
 ## Графики, расчёты
@@ -277,6 +308,8 @@ classDiagram
     }
     class ControlLogic {
         <<abstract>>
+        int output
+        set_output(int output)
     }
     class TemperatureCalculationThread {
         pyqtSignal~float~ temperature_signal
@@ -298,6 +331,7 @@ classDiagram
     ControlLogic <|-- DirectControlLogic
     ControlLogic <|-- PShapedControlLogic
     ControlLogic <|-- UShapedControlLogic
+    TRMParametersReadThread <-- ControlLogic
 ```
 
 ## Взаимодействие с БД
@@ -438,9 +472,9 @@ classDiagram
         CurveManager setpoint_curve
         CurveManager measured_temp_curve
         CurveManager set_temp_curve
-        update_setpoint_curve()       
-        update_measured_temp_curve()       
-        update_set_temp_curve()       
+        update_setpoint_curve(float value)       
+        update_measured_temp_curve(float value)       
+        update_set_temp_curve(float value)       
     }
     
     class PlotWidget {
@@ -463,10 +497,12 @@ classDiagram
     QTableWidget <|-- CharacteristicsTableWidget
     QTableWidget <|-- SensorInfoTable
     QTableWidget <|-- TRMParametersInfoTable
+    TRMParametersReadThread <-- TRMParametersInfoTable
     QAbstractSpinBox <|-- QDoubleSpinBox
     QAbstractSpinBox <|-- QSpinBox
     QWidget <|-- PlotWidget
     TemperaturePlotManager o-- PlotWidget
     TemperaturePlotManager *-- CurveManager
+    TRMParametersReadThread <-- TemperaturePlotManager
     CurveManager o-- PlotDataItem
 ```
