--- a/src/notebooks/сигнал напряжения от 0 до 1 В.ipynb
+++ b/src/notebooks/сигнал напряжения от 0 до 1 В.ipynb
@@ -2,159 +2,312 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "af37579e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import timeit\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# patching\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.insert(0, str(Path.cwd().parent))\n",
+    "\n",
+    "from utils.utils import remap, find_nearest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c378ca25",
+   "execution_count": 19,
+   "id": "f5c281d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperatures = [i for i in range(101)]"
+    "path = Path(\".\").resolve().parent.parent / \"data\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "51ad1760",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "voltages = [t / 100 for t in temperatures]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "7b3ade1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(path / \"DAC\" / \"mcp4725.csv\", usecols=[\"code\", \"voltage\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "913b4db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"voltage\"] <= 1.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3fefe77b",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>voltage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1231</th>\n",
+       "      <td>1231</td>\n",
+       "      <td>0.992578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1232</th>\n",
+       "      <td>1232</td>\n",
+       "      <td>0.993384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1233</th>\n",
+       "      <td>1233</td>\n",
+       "      <td>0.994189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>1234</td>\n",
+       "      <td>0.994995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1235</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>0.995801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1236</th>\n",
+       "      <td>1236</td>\n",
+       "      <td>0.996606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1237</th>\n",
+       "      <td>1237</td>\n",
+       "      <td>0.997412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1238</th>\n",
+       "      <td>1238</td>\n",
+       "      <td>0.998218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1239</th>\n",
+       "      <td>1239</td>\n",
+       "      <td>0.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1240</th>\n",
+       "      <td>1240</td>\n",
+       "      <td>0.999829</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[0.0,\n",
-       " 0.01,\n",
-       " 0.02,\n",
-       " 0.03,\n",
-       " 0.04,\n",
-       " 0.05,\n",
-       " 0.06,\n",
-       " 0.07,\n",
-       " 0.08,\n",
-       " 0.09,\n",
-       " 0.1,\n",
-       " 0.11,\n",
-       " 0.12,\n",
-       " 0.13,\n",
-       " 0.14,\n",
-       " 0.15,\n",
-       " 0.16,\n",
-       " 0.17,\n",
-       " 0.18,\n",
-       " 0.19,\n",
-       " 0.2,\n",
-       " 0.21,\n",
-       " 0.22,\n",
-       " 0.23,\n",
-       " 0.24,\n",
-       " 0.25,\n",
-       " 0.26,\n",
-       " 0.27,\n",
-       " 0.28,\n",
-       " 0.29,\n",
-       " 0.3,\n",
-       " 0.31,\n",
-       " 0.32,\n",
-       " 0.33,\n",
-       " 0.34,\n",
-       " 0.35,\n",
-       " 0.36,\n",
-       " 0.37,\n",
-       " 0.38,\n",
-       " 0.39,\n",
-       " 0.4,\n",
-       " 0.41,\n",
-       " 0.42,\n",
-       " 0.43,\n",
-       " 0.44,\n",
-       " 0.45,\n",
-       " 0.46,\n",
-       " 0.47,\n",
-       " 0.48,\n",
-       " 0.49,\n",
-       " 0.5,\n",
-       " 0.51,\n",
-       " 0.52,\n",
-       " 0.53,\n",
-       " 0.54,\n",
-       " 0.55,\n",
-       " 0.56,\n",
-       " 0.57,\n",
-       " 0.58,\n",
-       " 0.59,\n",
-       " 0.6,\n",
-       " 0.61,\n",
-       " 0.62,\n",
-       " 0.63,\n",
-       " 0.64,\n",
-       " 0.65,\n",
-       " 0.66,\n",
-       " 0.67,\n",
-       " 0.68,\n",
-       " 0.69,\n",
-       " 0.7,\n",
-       " 0.71,\n",
-       " 0.72,\n",
-       " 0.73,\n",
-       " 0.74,\n",
-       " 0.75,\n",
-       " 0.76,\n",
-       " 0.77,\n",
-       " 0.78,\n",
-       " 0.79,\n",
-       " 0.8,\n",
-       " 0.81,\n",
-       " 0.82,\n",
-       " 0.83,\n",
-       " 0.84,\n",
-       " 0.85,\n",
-       " 0.86,\n",
-       " 0.87,\n",
-       " 0.88,\n",
-       " 0.89,\n",
-       " 0.9,\n",
-       " 0.91,\n",
-       " 0.92,\n",
-       " 0.93,\n",
-       " 0.94,\n",
-       " 0.95,\n",
-       " 0.96,\n",
-       " 0.97,\n",
-       " 0.98,\n",
-       " 0.99,\n",
-       " 1.0]"
+       "      code   voltage\n",
+       "1231  1231  0.992578\n",
+       "1232  1232  0.993384\n",
+       "1233  1233  0.994189\n",
+       "1234  1234  0.994995\n",
+       "1235  1235  0.995801\n",
+       "1236  1236  0.996606\n",
+       "1237  1237  0.997412\n",
+       "1238  1238  0.998218\n",
+       "1239  1239  0.999023\n",
+       "1240  1240  0.999829"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "voltages"
+    "df.tail(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "913b4db5",
+   "id": "9acc9296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(path / \"sensors_characteristics\" / \"Сигнал напряжения от 0 до 1 В.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1030b978",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remap(5, 0, 10, 0, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7a490039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9933333333333333"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remap(99, -50, 100, 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "23aad4da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0003639200000179699"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeit.timeit(\"\"\"int(df[df[\"voltage\"] == find_nearest(df[\"voltage\"], 0.5)][\"code\"])\"\"\", \"from __main__ import df, find_nearest\", number=10) / 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c7d901ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'__main__'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a210a616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"a\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7c3e4ab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c76ddfb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3909999981697183e-08"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f72e4a5e",
    "metadata": {},
    "outputs": [],
    "source": []
