--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -407,7 +407,7 @@ classDiagram
     }
     
     class TRMParametersInfoTable {
-        update_info(list~dict~ parameters)
+        update_info(list~TRMParameter~ parameters)
     }
     
     class SensorInfoTable{
@@ -505,4 +505,78 @@ classDiagram
     TemperaturePlotManager *-- CurveManager
     TRMParametersReadThread <-- TemperaturePlotManager
     CurveManager o-- PlotDataItem
+```
+
+## Связь элементов интерфейса с программой
+
+```mermaid
+classDiagram
+    
+    class QSpinBox {
+        pyqtSignal valueChanged
+    }
+    
+    class SensorsComboBox {
+        pyqtSignal sensor_changed
+    }
+
+    class SensorWorker {
+        set_sensor()
+    }
+    
+    class CharacteristicsTableWidget {
+        display_characteristics()
+    }
+
+    class SensorsInfoTable{
+        update_info()
+    }
+
+    class QCheckBox {
+        pyqtSignal stateChanged
+    }
+    
+    class Solver {
+        set_interference_frequency()
+        set_interference_amplitude()
+    }
+    
+    class TemperatureCalculationThread {
+        pyqtSignal temperature_signal
+        float update_period
+        set_k_ratio()
+        set_temperature()
+    }
+    
+    class TRMParametersInfoTable {
+        update_info()
+    }
+    
+    
+    class TRMParametersReadThread {
+        pyqtSignal parameters_signal
+        pyqtSignal temperature_signal
+        pyqtSignal output_signal
+    }
+    
+    class TemperaturePlotManager {
+        update_setpoint_curve()       
+        update_measured_temp_curve()       
+        update_set_temp_curve()       
+    }
+    
+    SensorsComboBox <-- CharacteristicsTableWidget
+    SensorsComboBox <-- SensorsInfoTable
+    QSpinBox <-- CharacteristicsTableWidget
+    QSpinBox <-- SensorsInfoTable
+    QCheckBox <-- SensorWorker
+    SensorsComboBox <-- SensorWorker
+    TemperatureCalculationThread <-- SensorWorker
+    QSpinBox <-- Solver
+    QSpinBox <-- TemperatureCalculationThread
+    QCheckBox <-- Solver
+    TemperatureCalculationThread <-- TemperaturePlotManager
+    TRMParametersReadThread <-- TemperaturePlotManager
+    TRMParametersReadThread <-- TRMParametersInfoTable
+
 ```
