--- a/data/diagrams/диаграммы последовательностей.md
+++ b/data/diagrams/диаграммы последовательностей.md
@@ -28,6 +28,7 @@ sequenceDiagram
 
 ```mermaid
 sequenceDiagram
+    autonumber
     participant Пользователь
     participant TemperaturePlotManager
     participant TRMParametersInfoTable
@@ -53,6 +54,7 @@ sequenceDiagram
 
 ```mermaid
 sequenceDiagram
+    autonumber
     participant Пользователь
     participant TemperaturePlotManager
     participant TemperatureCalculationThread
