--- a/data/diagrams/диаграммы последовательностей.md
+++ b/data/diagrams/диаграммы последовательностей.md
@@ -61,7 +61,7 @@ sequenceDiagram
     participant Solver
     participant SensorManager
     participant Device
-    participant InterfaceBoard
+    participant Интерфейсная плата
     participant ТРМ
 
     loop
@@ -71,7 +71,7 @@ sequenceDiagram
         TemperaturePlotManager ->> Пользователь : обновить график
         TemperatureCalculationThread ->> SensorManager : установить рассчитанную температуру
         SensorManager ->> Device : отправить код
-        Device ->> InterfaceBoard : отправить код по шине
-        InterfaceBoard ->> ТРМ : выработать электрический сигнал
+        Device ->> Интерфейсная плата : отправить код по шине
+        Интерфейсная плата ->> ТРМ : выработать электрический сигнал
     end
 ```
