--- a/data/diagrams/диаграммы последовательностей.md
+++ b/data/diagrams/диаграммы последовательностей.md
@@ -11,16 +11,22 @@ sequenceDiagram
     participant Плата
     participant ТРМ
     Пользователь ->> Программа: Выбрать датчик
-    Программа ->> БД: Найти характеристику датчика
+    Программа ->> БД: Запросить характеристику датчика
     БД -->> Программа: Вернуть характеристику датчика
     Программа -->> Пользователь: Отобразить характеристику датчика
     Программа ->> Плата: Переключить реле
+    Плата -->> Программа : Реле переключены
     loop Несколько раз в секунду
-        Программа ->> Плата: Расcчитать температуру и отправить код
-        Плата ->> ТРМ: Выработать сигнал
-        Программа ->> ТРМ: Опросить параметры ТРМ-а
-        ТРМ -->> Программа: Вернуть запрошенные параметры
-        Программа -->> Пользователь: Перерисовать графики и отобразить параметры
+        par Симуляция сигнала датчика
+            Программа ->> Программа: Расcчитать температуру
+            Программа ->> Плата: Выработать сигнал
+            Плата -->> Программа: Сигнал выработан
+        and Опрос параметров и их отображение
+            Программа ->> ТРМ: Опросить параметры ТРМ-а
+            ТРМ -->> Программа: Вернуть запрошенные параметры
+            Программа ->> Программа: Перерисовать графики
+            Программа -->> Пользователь : Отобразить графики 
+        end
     end
 ```
 
