--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -314,6 +314,7 @@ classDiagram
     class TemperatureCalculationThread {
         pyqtSignal~float~ temperature_signal
         Solver solver
+        ControlLogic control_logic
         float update_period
         float
         bool reset
@@ -326,11 +327,13 @@ classDiagram
     
     QThread <|-- TemperatureCalculationThread
     TemperatureCalculationThread o-- Solver
+    TemperatureCalculationThread o-- ControlLogic
     Solver <|-- LinearSolver
     ControlLogic <|-- ReversedControlLogic
     ControlLogic <|-- DirectControlLogic
     ControlLogic <|-- PShapedControlLogic
     ControlLogic <|-- UShapedControlLogic
+    ControlLogic <|-- NoControlLogic
     TRMParametersReadThread <-- ControlLogic
 ```
 
