--- a/data/diagrams/диаграммы последовательностей.md
+++ b/data/diagrams/диаграммы последовательностей.md
@@ -44,15 +44,18 @@ sequenceDiagram
 
     loop
         TRMParametersReadThread ->> OwenClient : запросить параметры
-    loop на каждый параметр
-        OwenClient ->> ТРМ : запросить параметр
-        ТРМ -->> OwenClient : вернуть запрошенный параметр
-    end
-    OwenClient -->> TRMParametersReadThread : вернуть запрошенные параметры
-    TRMParametersReadThread ->> TRMParametersInfoTable : обновить значение параметров
-    TRMParametersInfoTable ->> Пользователь : отобразить параметры
-    TRMParametersReadThread ->> TemperaturePlotManager : обновить измеренную температуру  
-    TemperaturePlotManager ->> Пользователь : обновить график
+        loop на каждый параметр
+            OwenClient ->> ТРМ : запросить параметр
+            ТРМ -->> OwenClient : вернуть запрошенный параметр
+        end
+        OwenClient -->> TRMParametersReadThread : вернуть запрошенные параметры
+        par Обновление таблицы    
+            TRMParametersReadThread ->> TRMParametersInfoTable : обновить значение параметров
+            TRMParametersInfoTable -->> Пользователь : отобразить параметры
+        and Обновление графика
+            TRMParametersReadThread ->> TemperaturePlotManager : обновить график измеренной температуры  
+            TemperaturePlotManager -->> Пользователь : отобразить измененный график
+        end
     end
 ```
 
